--- a/style.css
+++ b/style.css
@@ -4,30 +4,32 @@ body {
     font-family: sans-serif;
     font-size: 1em;
 }
-body, section > div > .overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 section {
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(3, 250px);
     grid-template-rows: repeat(3, 250px);
     gap: 5px;
 }
 section > div {
+    position: relative;
+    display: inline-block;
     overflow: hidden;
 }
 
 section > div > .overlay {
     width: 250px;
     height: 250px;
-    position: relative;
-    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
     transition: all 0.3s;
+    top: 100%;
     color: #fff;
-    background: rgba(0, 0, 0, 0.5)
+    background: rgba(0, 0, 0, 0.5);
 }
-section > div > img:hover + .overlay, section > div > .overlay:hover {
-    bottom: 255px;
+section > div:hover .overlay {
+    top: 0;
 }
